--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     environment: production  # Reference your environment here
-
+    
+    permissions:
+      contents: write
+      packages: write
+      
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
