--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
+        uses: actions/setup-ruby@v1
         with:
           ruby-version: .ruby-version
-          bundler-cache: true
 
       - name: Verify Ruby setup
         run: |
@@ -39,10 +38,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
+        uses: actions/setup-ruby@v1
         with:
           ruby-version: .ruby-version
-          bundler-cache: true
 
       - name: Verify Ruby setup
         run: |
@@ -63,10 +61,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
+        uses: actions/setup-ruby@v1
         with:
           ruby-version: .ruby-version
-          bundler-cache: true
 
       - name: Verify Ruby setup
         run: |
@@ -107,10 +104,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
+        uses: actions/setup-ruby@v1
         with:
           ruby-version: .ruby-version
-          bundler-cache: true
 
       - name: Verify Ruby setup
         run: |
