--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Ruby
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.2.2'  # Specify a known stable Ruby version
+          ruby-version: '3.1.2'  # Specify a known stable Ruby version
 
       - name: Verify Ruby setup
         run: |
@@ -38,9 +38,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Ruby
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.2.2'  # Specify a known stable Ruby version
+          ruby-version: '3.1.2'  # Specify a known stable Ruby version
 
       - name: Verify Ruby setup
         run: |
@@ -61,9 +61,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Ruby
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.2.2'  # Specify a known stable Ruby version
+          ruby-version: '3.1.2'  # Specify a known stable Ruby version
 
       - name: Verify Ruby setup
         run: |
@@ -104,9 +104,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Ruby
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.2.2'  # Specify a known stable Ruby version
+          ruby-version: '3.1.2'  # Specify a known stable Ruby version
 
       - name: Verify Ruby setup
         run: |
