--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.1.2'  # Specify a known stable Ruby version
+      - name: Install Ruby dependencies
+        run: sudo apt-get update && sudo apt-get install -y libssl-dev libreadline-dev zlib1g-dev
+
+      - name: Set up Ruby with rbenv
+        run: |
+          curl -fsSL https://github.com/rbenv/rbenv-installer/raw/main/bin/rbenv-installer | bash
+          echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
+          echo 'eval "$(rbenv init -)"' >> ~/.bashrc
+          source ~/.bashrc
+          rbenv install 3.1.2
+          rbenv global 3.1.2
+          gem install bundler
 
       - name: Verify Ruby setup
         run: |
@@ -37,10 +45,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.1.2'  # Specify a known stable Ruby version
+      - name: Install Ruby dependencies
+        run: sudo apt-get update && sudo apt-get install -y libssl-dev libreadline-dev zlib1g-dev
+
+      - name: Set up Ruby with rbenv
+        run: |
+          curl -fsSL https://github.com/rbenv/rbenv-installer/raw/main/bin/rbenv-installer | bash
+          echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
+          echo 'eval "$(rbenv init -)"' >> ~/.bashrc
+          source ~/.bashrc
+          rbenv install 3.1.2
+          rbenv global 3.1.2
+          gem install bundler
 
       - name: Verify Ruby setup
         run: |
@@ -60,10 +76,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.1.2'  # Specify a known stable Ruby version
+      - name: Install Ruby dependencies
+        run: sudo apt-get update && sudo apt-get install -y libssl-dev libreadline-dev zlib1g-dev
+
+      - name: Set up Ruby with rbenv
+        run: |
+          curl -fsSL https://github.com/rbenv/rbenv-installer/raw/main/bin/rbenv-installer | bash
+          echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
+          echo 'eval "$(rbenv init -)"' >> ~/.bashrc
+          source ~/.bashrc
+          rbenv install 3.1.2
+          rbenv global 3.1.2
+          gem install bundler
 
       - name: Verify Ruby setup
         run: |
@@ -103,10 +127,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.1.2'  # Specify a known stable Ruby version
+      - name: Install Ruby dependencies
+        run: sudo apt-get update && sudo apt-get install -y libssl-dev libreadline-dev zlib1g-dev
+
+      - name: Set up Ruby with rbenv
+        run: |
+          curl -fsSL https://github.com/rbenv/rbenv-installer/raw/main/bin/rbenv-installer | bash
+          echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
+          echo 'eval "$(rbenv init -)"' >> ~/.bashrc
+          source ~/.bashrc
+          rbenv install 3.1.2
+          rbenv global 3.1.2
+          gem install bundler
 
       - name: Verify Ruby setup
         run: |
