--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -11,17 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['3.2', '3.1', '3.0']
+        ruby-version: ['3.0', '3.1', '3.2']
 
     services:
       postgres:
-        image: postgres:latest
+        image: postgres:15
         env:
-          POSTGRES_DB: postgres
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: test_db
           POSTGRES_USER: postgres
-        ports:
-          - 5432:5432
+          POSTGRES_PASSWORD: postgres
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -29,10 +27,11 @@ jobs:
           --health-retries 5
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-    - name: Install libvips
-      run: sudo apt-get install -y libvips
+    - name: Install dependencies
+      run: sudo apt-get update && sudo apt-get install -y libvips postgresql-client
 
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
@@ -40,35 +39,15 @@ jobs:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true
 
-    - name: Verify Ruby setup
-      run: ruby -v
+    - name: Database configuration
+      run: cp config/database.yml.ci config/database.yml
 
-    - name: Set execute permissions
-      run: chmod +x bin/*
-
-    - name: Setup Code Climate test-reporter
-      run: |
-        curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-        chmod +x ./cc-test-reporter
-        ./cc-test-reporter before-build
-
-    - name: Create DB
-      env:
-        DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/postgres"
-      run: |
-        cp config/database.yml.ci config/database.yml
-        bin/rails db:setup
-
-    - name: Compile assets
+    - name: Prepare database
       env:
         RAILS_ENV: test
-      run: bin/rails app:assets:precompile
+      run: bin/rails db:setup
 
     - name: Run tests
-      run: bin/rails test
-
-    - name: Publish Code Coverage
       env:
-        GIT_BRANCH: ${GITHUB_REF/refs/heads/}
-      run: ./cc-test-reporter after-build -r ${{ secrets.CodeClimate }}
-      if: startsWith(github.ref, 'refs/heads/main')
+        RAILS_ENV: test
+      run: bin/rails test
