--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,14 +4,14 @@ on:
   push:
     tags:
       - 'v*.*.*'
-      - 'v*.*.*-rc*'
 
 jobs:
   publish:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
 
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
@@ -19,16 +19,12 @@ jobs:
         ruby-version: '3.2'
         bundler-cache: true
 
-    - name: Validate Gem Specification
-      run: gem specification your_gem.gemspec
+    - name: Install dependencies
+      run: bundle install
 
     - name: Build and Publish Gem
       env:
         RUBYGEMS_API_KEY: ${{ secrets.RUBYGEMS_API_KEY }}
       run: |
-        gem build your_gem.gemspec
-        gem push your_gem-*.gem
-
-    - name: Confirm Publish
-      run: gem list | grep your_gem
-
+        gem build superfast.gemspec
+        gem push superfast-*.gem
