--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -17,7 +17,7 @@ jobs:
       postgres:
         image: postgres:15
         env:
-          POSTGRES_DB: test_db
+          POSTGRES_DB: superfast_test 
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: superfast
         options: >-
