update db config path in ruby,yml

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -40,7 +40,7 @@ jobs:
         bundler-cache: true
 
     - name: Database configuration
-      run: cp config/database.yml.ci config/database.yml
+      run: cp superfast\config\database.yml.ci superfast\config\database.yml
 
     - name: Ensure bin scripts are executable
       run: chmod +x bin/*
