--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -27,6 +27,9 @@ jobs:
           --health-retries 5
 
     steps:
+    - name: Clear gem cache
+      run: rm -rf ~/.gem
+
     - name: Checkout code
       uses: actions/checkout@v2
 
@@ -40,7 +43,7 @@ jobs:
         bundler-cache: true
 
     - name: Database configuration
-      run: cp superfast/config/database.yml.ci superfast/config/database.yml
+      run: cp  config/database.yml config/database.yml.ci
 
     - name: Ensure bin scripts are executable
       run: chmod +x bin/*
@@ -49,6 +52,9 @@ jobs:
       env:
         RAILS_ENV: test
       run: bin/rails db:setup
+
+    - name: Check PostgreSQL inside the container
+      run: docker exec -it $(docker ps -qf "name=postgres") psql -U postgres -d superfast_test
 
     - name: Run tests
       env:
