--- a/config/database.yml
+++ b/config/database.yml
@@ -20,9 +20,8 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: postgres
   password: superfast
-  
+  host: localhost
   port: 5432
-
 
 
 development:
