--- a/config/database.yml
+++ b/config/database.yml
@@ -40,7 +40,7 @@ development:
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  host: postgres
+  host: localhost
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
@@ -63,7 +63,6 @@ test:
   database: superfast_test
   username: postgres
   password: superfast 
-  host: postgres
   port: 5432
 
 # As with config/credentials.yml, you never want to store sensitive information,
