--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -43,7 +43,7 @@ jobs:
         bundler-cache: true
 
     - name: Database configuration
-      run: cp config/database.yml config/database.yml.ci
+      run: cp config/database.yml.ci config/database.yml 
 
     - name: Ensure bin scripts are executable
       run: chmod +x bin/*
